Updated REI, fixed REI hide event, added '// requires <modid>' propery in script file info, fixed modifiation event